# russ_cox_code_search

./: .gitignore  README.md  benchmark.py  cli.py  embedder_api.py  get_commits.py  main.py  play.py  pyproject.toml  pyrightconfig.json  todos.md
src/: code_search.py  embedder.py  file_watcher.py  indexer.py  pubsub.py  utils.py
src/indexer/: __init__.py  semantic.py  trgm.py
tests/: test_code_search.py  test_embedder_api.py  test_indexer.py  test_semantic.py  test_utils.py
